# openglcookbookminilib

./: .gitignore  CMakeLists.txt  main.cpp
Common/: Common.h  GLSLShader.cpp  GLSLShader.h  GLWindowWrapper.cpp  GLWindowWrapper.h  Logger.cpp  Logger.h  RendererAbstract.h
Tutorial1/: Tutorial1Renderer.cpp  Tutorial1Renderer.h
